--- a/Project Password Generator/index.html
+++ b/Project Password Generator/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="container">
+        <div 
         <h1 style="color: aquamarine;">Random Password Generator</h1>
         <div class="form-group">
             <label for="length">Password Length:</label>
